--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -15,8 +15,9 @@ spring:
         ds-mysql:
           # useUnicode=true，启用Unicode字符集传输，强制使用多字节编码（如UTF-8），避免ASCII编码导致非英文字符丢失
           # characterEncoding=UTF-8，明确指定客户端到服务器的字符编码为UTF-8，需满足：✅ 数据库表字段为UTF-8编码（如utf8mb4）✅ Java程序文件编码为UTF-8
+          # allowPublicKeyRetrieval=true，允许公钥检索，解决JDBC连接时因公钥不存在导致无法连接的问题
           # serverTimezone=Asia/Shanghai，设置时区，解决JDBC驱动与MySQL服务器时区不一致导致的时间偏差问题
-          url: jdbc:mysql://127.0.0.1:3306/javaapi_springboot?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+          url: jdbc:mysql://127.0.0.1:3306/javaapi_springboot?useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
           username: root
           password: root
           driver-class-name: com.mysql.cj.jdbc.Driver
@@ -28,36 +29,36 @@ spring:
             max-lifetime: 1800000      # 连接的最大生命周期（毫秒）
             connection-timeout: 30000  # 获取连接的超时时间（毫秒）
         # 数据源 - Oracle
-        ds-oracle:
-          url: jdbc:oracle:thin:@IP地址:1521:实例名
-#          url: jdbc:oracle:thin:@//IP地址:1521/服务名
-          username: 用户名
-          password: 密码
-          driver-class-name: oracle.jdbc.OracleDriver
-          # HikariCP 连接池配置
-          hikari:
-            maximum-pool-size: 10      # 连接池中允许的最大连接数
-            minimum-idle: 2            # 连接池中保持的最小空闲连接数
-            idle-timeout: 30000        # 空闲连接超时时间（毫秒）
-            max-lifetime: 1800000      # 连接的最大生命周期（毫秒）
-            connection-timeout: 30000  # 获取连接的超时时间（毫秒）
-        # CMS数据源 - OceanBase-Oracle
-        cms-ds:
-          url: jdbc:oceanbase://IP地址:端口号/数据库名?
-            compatibleMode=oracle&
-            useUnicode=true&
-            characterEncoding=UTF-8&
-            serverTimezone=Asia/Shanghai
-          username: 用户名@租户名#集群名      # 格式：用户名@租户名#集群名
-          password: 密码
-          driver-class-name: com.oceanbase.jdbc.Driver
-          # HikariCP 连接池配置
-          hikari:
-            maximum-pool-size: 10      # 连接池中允许的最大连接数
-            minimum-idle: 2            # 连接池中保持的最小空闲连接数
-            idle-timeout: 30000        # 空闲连接超时时间（毫秒）
-            max-lifetime: 1800000      # 连接的最大生命周期（毫秒）
-            connection-timeout: 30000  # 获取连接的超时时间（毫秒）
+#        ds-oracle:
+#          url: jdbc:oracle:thin:@IP地址:1521:实例名
+##          url: jdbc:oracle:thin:@//IP地址:1521/服务名
+#          username: 用户名
+#          password: 密码
+#          driver-class-name: oracle.jdbc.OracleDriver
+#          # HikariCP 连接池配置
+#          hikari:
+#            maximum-pool-size: 10      # 连接池中允许的最大连接数
+#            minimum-idle: 2            # 连接池中保持的最小空闲连接数
+#            idle-timeout: 30000        # 空闲连接超时时间（毫秒）
+#            max-lifetime: 1800000      # 连接的最大生命周期（毫秒）
+#            connection-timeout: 30000  # 获取连接的超时时间（毫秒）
+#        # CMS数据源 - OceanBase-Oracle
+#        cms-ds:
+#          url: jdbc:oceanbase://IP地址:端口号/数据库名?
+#            compatibleMode=oracle&
+#            useUnicode=true&
+#            characterEncoding=UTF-8&
+#            serverTimezone=Asia/Shanghai
+#          username: 用户名@租户名#集群名      # 格式：用户名@租户名#集群名
+#          password: 密码
+#          driver-class-name: com.oceanbase.jdbc.Driver
+#          # HikariCP 连接池配置
+#          hikari:
+#            maximum-pool-size: 10      # 连接池中允许的最大连接数
+#            minimum-idle: 2            # 连接池中保持的最小空闲连接数
+#            idle-timeout: 30000        # 空闲连接超时时间（毫秒）
+#            max-lifetime: 1800000      # 连接的最大生命周期（毫秒）
+#            connection-timeout: 30000  # 获取连接的超时时间（毫秒）
 
 # MyBatis 配置
 mybatis:
