build(dependencies): 更新 API 文档相关配置和依赖 - 在 application-dev.yml 和 application-prod.yml 中添加 springdoc-openapi 配置 - 增加 knife4j 增强配置 - 更新 pom.xml 中 springdoc-openapi-ui 依赖版本 - 添加 knife4j-openapi3-spring-boot-starter 依赖

--- a/pom.xml
+++ b/pom.xml
@@ -130,8 +130,8 @@
             <version>3.5.5</version>
         </dependency>
 
-        <!-- swagger 3 版本兼容 Spring Boot 2.7.x -->
-        <!-- 去除swagger-ui，在ApiFox中使用http://ip:port/v3/api-docs -->
+        <!-- springdoc-openapi,兼容OpenAPI3规范，兼容 Spring Boot 2.7.x -->
+        <!-- 去除swagger-ui，在ApiFox中使用 http://ip:port/v3/api-docs -->
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
@@ -142,6 +142,13 @@
                     <groupId>org.webjars</groupId>
                 </exclusion>
             </exclusions>
+        </dependency>
+
+        <!-- Knife4j 网页版：http://ip:port/doc.html -->
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-openapi3-spring-boot-starter</artifactId>
+            <version>4.5.0</version>
         </dependency>
 
         <!-- 测试用 -->
