--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -59,6 +59,24 @@ spring:
             max-lifetime: 1800000      # 连接的最大生命周期（毫秒）
             connection-timeout: 30000  # 获取连接的超时时间（毫秒）
 
+# springdoc-openapi项目配置
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+    tags-sorter: alpha
+    operations-sorter: alpha
+  api-docs:
+    path: /v3/api-docs
+  group-configs:
+    - group: 'default'
+      paths-to-match: '/**'
+      packages-to-scan: com.loto
+# knife4j的增强配置，不需要增强可以不配
+knife4j:
+  enable: true
+  setting:
+    language: zh_cn
+
 # MyBatis 配置
 mybatis:
   # Mapper 文件的扫描路径
