docs.openapi: 更新 OpenAPI 文档配置 - 在 OpenApiConfig 中添加联系人信息 - 修改 API 文档的标题和描述 - 更新开发环境和生产环境的 group 名称

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -69,7 +69,7 @@ springdoc:
   api-docs:
     path: /v3/api-docs
   group-configs:
-    - group: 'default'
+    - group: '开发环境'
       paths-to-match: '/**'
       packages-to-scan: com.loto
 # knife4j的增强配置，不需要增强可以不配
