build: 关闭生产环境中的 API 文档 - 禁用 springdoc-openapi 的 API 文档生成 - 移除 swagger-ui 和 knife4j 相关配置 - 优化 application-prod.yml 文件结构

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -59,23 +59,12 @@ spring:
             max-lifetime: 1800000      # 连接的最大生命周期（毫秒）
             connection-timeout: 30000  # 获取连接的超时时间（毫秒）
 
-# springdoc-openapi项目配置
+# springdoc-openapi项目配置 - 生产环境关闭
 springdoc:
   swagger-ui:
-    path: /swagger-ui.html
-    tags-sorter: alpha
-    operations-sorter: alpha
+    enabled: false
   api-docs:
-    path: /v3/api-docs
-  group-configs:
-    - group: '生产环境'
-      paths-to-match: '/**'
-      packages-to-scan: com.loto
-# knife4j的增强配置，不需要增强可以不配
-knife4j:
-  enable: true
-  setting:
-    language: zh_cn
+    enabled: false
 
 # MyBatis 配置
 mybatis:
