--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -111,6 +111,10 @@ logging:
     org.springframework: INFO
     com.baomidou: INFO
 
+web-client-url:
+  order-list-by-id-url: http://127.0.0.1:4523/m1/6737648-6448932-default/api/order/getOrderListById/
+  order-list-page-url: http://localhost:8080/order/listPage
+
 # 跨域配置 - 白名单
 cors:
   allowed-origins:
