--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,13 @@
             <version>19.3.0.0</version>
         </dependency>
 
+        <!-- Oracle 国际化和字符集支持 -->
+        <dependency>
+            <groupId>com.oracle.database.nls</groupId>
+            <artifactId>orai18n</artifactId>
+            <version>19.3.0.0</version>
+        </dependency>
+
         <!-- Lombok依赖 -不打包 -->
         <dependency>
             <groupId>org.projectlombok</groupId>
